<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VideoActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/return_to_main"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/border"
            android:contentDescription="@string/return_img_description"
            android:src="@drawable/baseline_return_24" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.devbrackets.android.exomedia.ui.widget.VideoView
        android:id="@+id/video_view"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:paddingTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:useDefaultControls="true"
        tools:layout_editor_absoluteX="16dp" />

    <ProgressBar
        android:id="@+id/pb_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/video_view"
        app:layout_constraintVertical_bias="0.12"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/start"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_command_scroller" />

    <ScrollView
        android:id="@+id/tv_command_scroller"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="32dp"
        android:fadeScrollbars="false"
        android:nestedScrollingEnabled="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/et_url"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/tv_command_output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true" />
    </ScrollView>

    <Button
        android:id="@+id/btn_start_streaming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_start_stream"
        app:layout_constraintBottom_toTopOf="@+id/btn_stop_download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_url"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/url_hint"
        android:inputType="textUri"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_start_streaming"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_stop_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_stop_download"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/video_view"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>